src/css/style.css
/* ... */
.text-sheen:hover:after {
  left: 100%;
  opacity: 1;
}

/*-----------------------------------------------------
  Jiggle Animations:
------------------------------------------------------*/

.jiggle {
  transform: scale(1);
}

.jiggle:hover {
  animation-name: jiggle;
  animation-duration: .75s;
  animation-direction: alternate;
  animation-delay: 0;
  timing-function: ease-in-out;
}

@-webkit-keyframes jiggle {
  from { transform: scaleY(1) scaleX(1); }
  10% { transform: scaleY(.98) scaleX(1.02);}
  25% { transform: scaleY(1) scaleX(1);}
  30% { transform: scaleY(1.08) scaleX(.9); }
  40% { transform: scaleY(.99) scaleX(1.05); }
  50% { transform: scaleY(1.05) scaleX(.95);}
  60% { transform: scaleY(.995) scaleX(1.055); }
  70% { transform: scaleY(1.02) scaleX(.98);}
  80% { transform: scaleY(.99) scaleX(1.01); }
  90% { transform: scaleY(1.01) scaleX(.99);}
}

.alert-jiggle {
  animation-name: alert-jiggle;
  animation-duration: 1.2s;
  timing-function: ease-in-out;
}

@-webkit-keyframes alert-jiggle {
  from { transform: translateY(0); }
  20% { transform: translateY(-10px);}
  25% { transform: rotate(1.5deg) translateY(-10px)}
  30% { transform: rotate(-1.3deg) translateY(-10px)}
  35% { transform: rotate(1.1deg) translateY(-10px)}
  40% { transform: rotate(-.9deg) translateY(-10px)}
  45% { transform: rotate(.7deg) translateY(-10px)}
  50% { transform: rotate(-.5deg) translateY(-10px)}
  55% { transform: rotate(.3deg) translateY(-10px)}
  70% { transform: translateY(-10px)}
}

/*-----------------------------------------------------
  Header:
------------------------------------------------------*/

#page-header {
  display: block;
  position: relative;
  top: 0;
  left: 0;
  height: auto;
  width: 100%;
  overflow: visible;
  color: #000;
  z-index: 99;
  transform: translateY(-130px);
  transition: all 300ms ease;
  pointer-events: none;
}

#page-header a {
  pointer-events: auto;
}

#page-header.on {
  transform: translateY(0);
}

#page-header .trigger-icon {
  font-size: 2.5rem;
}

#page-header a {
  color: inherit;
}

#hd-inner {
  height: 77px;
  padding: 16px 0;
  position: relative;
}

#page-header:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 130px;
  background: linear-gradient(to bottom, rgba(255,255,255,.9) 0%, rgba(255,255,255,0) 100%);
  border-top: 4px solid #f27c00;
}

#page-header.culture-header:before {
  content: none;
}

#menu-bar-logo {
  float: left;
  height: 100%;
  min-width: 200px;
}

.menu-logo {
  display: inline-block;
  height: 100%;
  margin-right: 5px;
}

#menu-bar-logo span {
  display: inline-block;
  vertical-align: top;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 55px;
}

#menu-bar-trigger {
  float: right;
}

#menu-bar-trigger .icon,
#menu-bar-trigger .menu-trigger-text {
  vertical-align: middle;
  line-height: 34px;
}

#nav-wrap {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  height: 0;
  width: 100%;
  overflow: hidden;
}

#home-panel-nav {
  position: absolute;
  z-index: 110;
  top: 0;
  left: 0;
  width: 100%;
  padding-top: 20px;
  color: #fff;
  -webkit-transform: translate3d(0px, 0px, 0px);
  transform: translate3d(0px, 0px, 0px);
}

#home-panel-nav a {
  color: inherit;
}

#home-nav-logo {
  display: block;
  float: left;
  height: 50px;
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 60px;
}

.no-svg #home-nav-logo {
  transform: none;
  background-size: auto 100%;
  background: url(/img/logo-trans-white.png) no-repeat;
  padding-left: 95px;
}

.no-svg .home-logo {
  display: none;
}

.home-logo {
  height: 100%;
  display: inline-block;
  pointer-events: none;
}

#home-nav-logo span {
  display: inline-block;
  vertical-align: top;
  line-height: 60px;
}

#home-menu-trigger {
  float: right;
}

.trigger-icon {
  font-size: 4rem;
  line-height: 4rem;
}

.trigger-icon:before {
  margin: 0;
}

/*-----------------------------------------------------
  Menu:
------------------------------------------------------*/

#main-menu {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  height: 0;
  width: 100%;
  overflow: hidden;
  background: #f36d21;
  color: #fff;
  -webkit-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
  -moz-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
  -o-transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
  transition: all 500ms cubic-bezier(0.73, -0.01, 0.28, 0.99);
}

#main-menu.on {
  height: 100%;
}

#menu-inner {
  height: 100vh;
}

#main-menu a {
  color: inherit;
}

.close-menu-wrap {
  padding: 20px 0;
  position: relative;
  z-index: 9;
  height: auto;
}

#close-menu-link {
  float: right;
  font-size: 2.2rem;
  font-weight: 700;
  vertical-align: middle;
  margin-right: 5px;
}

#close-menu-link i:before{
  font-size: 3.3rem;
  vertical-align: middle;
  margin: 0 -3px 0 0;
}

#menu-list {
  padding: 0;
  margin: 0 auto;
  max-width: 450px;
  list-style: none;
  font-size: 3.2rem;
  line-height: 1;
}

.menu-link {
  padding: 12px 0;
  display: block;
  position: relative;
}

.menu-link:after {
  content: '';
  display: inline-block;
  width: 0;
  height: 1px;
  position: absolute;
  bottom: 0;
  left: 50%;
  background: rgba(255,255,255,.8);
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.menu-link:hover:after,
.menu-link.active:after {
  width: 100%;
  left: 0;
}

#instantclick-bar {
  background: #f93f00;
  height: 4px;
}

/*-----------------------------------------------------
  Main Content Area:
------------------------------------------------------*/

#container {
  position: relative;
  z-index: 10;
}

.full-height {
  height: 100%;
}

/*-----------------------------------------------------
  Home Page: #banner-panel
------------------------------------------------------*/

#banner-panel {
  border-top: 4px solid #f27c00;
}
/* ... */

